<resources>
    <string name="app_name">Custom VPN</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="server_address">Server Address</string>
    <string name="server_port">Server Port</string>
    <string name="server_config_hint">Server: ip:port@username:password</string>
    <string name="sni_label">SNI (Server Name)</string>
    <string name="payload_label">Custom Payload</string>
    <string name="connection_mode">Connection Mode</string>
    <string name="ssh_port">SSH Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dns_settings">DNS Settings</string>
    <string name="dns1">Primary DNS</string>
    <string name="dns2">Secondary DNS</string>
    <string name="mtu_label">MTU Size</string>
    <string name="save_config">Save Configuration</string>
    <string name="load_config">Load Configuration</string>
    <string name="clear_config">Clear</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_connected">Connected</string>
    <string name="status_failed">Connection Failed</string>
    <string name="logs_title">Connection Logs</string>
    <string name="configurations">Configurations</string>
    <string name="new_config">New</string>
    <string name="edit_config">Edit</string>
    <string name="delete_config">Delete</string>
    <string name="vpn_permission_required">VPN permission is required</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version 1.0.0</string>
    <string name="compress_data">Enable Compression</string>
    <string name="udp_dns">Enable UDP DNS</string>
    <string name="keep_alive">Keep Alive</string>
    <string name="connection_timeout">Connection Timeout (seconds)</string>
</resources>
